--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <button id="btn4">4</button>
             <button id="btn5">5</button>
         </div>
-        <a href="#thank.html">
+        <a href="thank.html">
             <button class="submit">SUBMIT</button>
         </a>
     </div>
